# linkleaf

./: .gitignore  Cargo copy.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
book/: book.toml
book/src/: Link-Agg-Cloud-Arch.excalidraw  Link-Agg-Single-User.excalidraw  intro.md
crates/linkleaf-cli/: Cargo.toml  README.md
crates/linkleaf-cli/src/: command.rs  main.rs
crates/linkleaf-cli/templates/: feed.html
crates/linkleaf-core/: Cargo.toml  README.md
crates/linkleaf-core/examples/: filter.rs  gen_rss_feed.rs  quickstart.rs  upsert_by_id.rs  upsert_by_url.rs  write_rss_feed.rs
crates/linkleaf-core/proto/linkleaf/v1/: feed.proto
crates/linkleaf-core/src/: fs.rs  lib.rs  rss.rs  validation.rs
myfeed/: mylinks.pb
proto/linkleaf/v1/: feed.proto
src/: api.rs  command.rs  feed.rs  html.rs  lib.rs  main.rs
templates/: style.css
