[workspace]
members = ["crates/linkleaf-core", "crates/linkleaf-cli"]
resolver = "2"

[workspace.package]
edition = "2024"
repository = "https://github.com/doriancodes/linkleaf"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
time = { version = "0.3", features = [
    "formatting",
    "parsing",
    "macros",
    "local-offset",
] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
