[package]
name = "linkleaf-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "linkleaf"
path = "src/main.rs"

[dependencies]
linkleaf-core = { path = "../linkleaf-core" }
clap = { version = "4.5", features = ["derive"] }
askama = "0.12"
anyhow.workspace = true
time.workspace = true
serde.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
