[package]
name = "linkleaf-cli"
version = "0.1.0"
edition = "2024"
description = "Local-first protobuf-only link feed manager (linkleaf.v1) for the terminal"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/doriancodes/linkleaf"
homepage = "https://github.com/doriancodes/linkleaf/tree/main/crates/linkleaf-cli"
documentation = "https://github.com/doriancodes/linkleaf/tree/main/crates/linkleaf-cli"
keywords = ["protobuf", "links", "feed", "local-first", "cli"]
categories = [  "command-line-utilities","filesystem","encoding"]

include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "logo.svg",
    "logo-monochrome.svg"
]

[[bin]]
name = "linkleaf"
path = "src/main.rs"

[features]
# Enable logging in the CLI and forward-enable logging in linkleaf-core.
logs = ["dep:tracing-subscriber", "linkleaf-core/logs"]

[dependencies]
linkleaf-core = "0.1.1"
clap = { version = "4.5", features = ["derive"] }
anyhow.workspace = true
time.workspace = true
serde.workspace = true
uuid.workspace = true
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }

[dev-dependencies]
tempfile = "3"

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
