[package]
name = "linkleaf-core"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13"
anyhow.workspace = true
time.workspace = true
serde.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"

# Ensure docs.rs builds pick defaults that compile
[package.metadata.docs.rs]
all-features = false
no-default-features = false
